--- a/productLandingPage/styles/challenge/_pricing.sass
+++ b/productLandingPage/styles/challenge/_pricing.sass
@@ -7,7 +7,7 @@ $grid-column-gap: 1em
     display: grid
     grid-template-columns: 100%
     grid-template-rows: auto
-    grid-column-gap: 1em
+    grid-column-gap: 0
     grid-row-gap: 2em
     justify-content: space-around
 
