--- a/productLandingPage/styles/challenge/_welcome.sass
+++ b/productLandingPage/styles/challenge/_welcome.sass
@@ -1,7 +1,10 @@
 @import 'welcome_menu'
 
 #main-welcome
-    background-image: url('../../img/rosa (1).jpg')
+    background-image: url('../../img/rosalia.jpg')
+    background-size: cover
+    background-position-x: center
+    background-position-y: top
     overflow: hidden
     width: 100%
     position: relative
