--- a/productLandingPage/styles/challenge/_welcome_menu.sass
+++ b/productLandingPage/styles/challenge/_welcome_menu.sass
@@ -6,7 +6,7 @@
     align-items: center
     justify-content: center
     min-height: 100vh
-    background: linear-gradient(to right, #200122, #6f0000)
+    // background: linear-gradient(to right, #200122, #6f0000)
 
 #title-img-container,
 #links-container
