--- a/productLandingPage/styles/classes/_theme.sass
+++ b/productLandingPage/styles/classes/_theme.sass
@@ -1,6 +1,6 @@
 /* Color Theme Swatches in Hex */
-$accent: #FFC107
-$primary: #E91E63
+$accent: #FFA000
+$primary: #C62828
 $secondary: #009688
 
 /* Color Theme Swatches in RGBA */
