--- a/productLandingPage/styles/index/index.css
+++ b/productLandingPage/styles/index/index.css
@@ -38,25 +38,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -98,25 +98,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -158,25 +158,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -218,25 +218,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -278,25 +278,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -338,25 +338,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -398,25 +398,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -458,25 +458,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -518,25 +518,25 @@ h6 {
 .color-primary,
 .before-color-primary:before,
 .after-color-primary:after {
-  color: #E91E63 !important;
+  color: #C62828 !important;
 }
 
 .primary,
 .before-primary:before,
 .after-primary:after {
-  background: #E91E63 !important;
+  background: #C62828 !important;
 }
 
 .color-accent,
 .before-color-accent:before,
 .after-color-accent:after {
-  color: #FFC107 !important;
+  color: #FFA000 !important;
 }
 
 .accent,
 .before-accent:before,
 .after-accent:after {
-  background: #FFC107 !important;
+  background: #FFA000 !important;
 }
 
 .color-secondary,
@@ -577,22 +577,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -627,22 +627,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -677,22 +677,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -727,22 +727,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -777,22 +777,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -827,22 +827,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -877,22 +877,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -927,22 +927,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -977,22 +977,22 @@ h6 {
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #070103 !important;
+  color: black !important;
 }
 
 .dark.primary,
 .dark .primary {
-  background: #070103 !important;
+  background: black !important;
 }
 
 .dark.color-accent,
 .dark .color-accent {
-  color: #070500 !important;
+  color: black !important;
 }
 
 .dark.accent,
 .dark .accent {
-  background: #070500 !important;
+  background: black !important;
 }
 
 .dark.color-secondary,
@@ -1026,19 +1026,19 @@ h6 {
 }
 
 .alpha-color-primary-1 {
-  color: rgba(233, 30, 99, 0.9) !important;
+  color: rgba(198, 40, 40, 0.9) !important;
 }
 
 .alpha-primary-1 {
-  background: rgba(233, 30, 99, 0.9) !important;
+  background: rgba(198, 40, 40, 0.9) !important;
 }
 
 .alpha-color-accent-1 {
-  color: rgba(255, 193, 7, 0.9) !important;
+  color: rgba(255, 160, 0, 0.9) !important;
 }
 
 .alpha-accent-1 {
-  background: rgba(255, 193, 7, 0.9) !important;
+  background: rgba(255, 160, 0, 0.9) !important;
 }
 
 .alpha-color-secondary-1 {
@@ -1066,19 +1066,19 @@ h6 {
 }
 
 .alpha-color-primary-2 {
-  color: rgba(233, 30, 99, 0.8) !important;
+  color: rgba(198, 40, 40, 0.8) !important;
 }
 
 .alpha-primary-2 {
-  background: rgba(233, 30, 99, 0.8) !important;
+  background: rgba(198, 40, 40, 0.8) !important;
 }
 
 .alpha-color-accent-2 {
-  color: rgba(255, 193, 7, 0.8) !important;
+  color: rgba(255, 160, 0, 0.8) !important;
 }
 
 .alpha-accent-2 {
-  background: rgba(255, 193, 7, 0.8) !important;
+  background: rgba(255, 160, 0, 0.8) !important;
 }
 
 .alpha-color-secondary-2 {
@@ -1106,19 +1106,19 @@ h6 {
 }
 
 .alpha-color-primary-3 {
-  color: rgba(233, 30, 99, 0.7) !important;
+  color: rgba(198, 40, 40, 0.7) !important;
 }
 
 .alpha-primary-3 {
-  background: rgba(233, 30, 99, 0.7) !important;
+  background: rgba(198, 40, 40, 0.7) !important;
 }
 
 .alpha-color-accent-3 {
-  color: rgba(255, 193, 7, 0.7) !important;
+  color: rgba(255, 160, 0, 0.7) !important;
 }
 
 .alpha-accent-3 {
-  background: rgba(255, 193, 7, 0.7) !important;
+  background: rgba(255, 160, 0, 0.7) !important;
 }
 
 .alpha-color-secondary-3 {
@@ -1146,19 +1146,19 @@ h6 {
 }
 
 .alpha-color-primary-4 {
-  color: rgba(233, 30, 99, 0.6) !important;
+  color: rgba(198, 40, 40, 0.6) !important;
 }
 
 .alpha-primary-4 {
-  background: rgba(233, 30, 99, 0.6) !important;
+  background: rgba(198, 40, 40, 0.6) !important;
 }
 
 .alpha-color-accent-4 {
-  color: rgba(255, 193, 7, 0.6) !important;
+  color: rgba(255, 160, 0, 0.6) !important;
 }
 
 .alpha-accent-4 {
-  background: rgba(255, 193, 7, 0.6) !important;
+  background: rgba(255, 160, 0, 0.6) !important;
 }
 
 .alpha-color-secondary-4 {
@@ -1186,19 +1186,19 @@ h6 {
 }
 
 .alpha-color-primary-5 {
-  color: rgba(233, 30, 99, 0.5) !important;
+  color: rgba(198, 40, 40, 0.5) !important;
 }
 
 .alpha-primary-5 {
-  background: rgba(233, 30, 99, 0.5) !important;
+  background: rgba(198, 40, 40, 0.5) !important;
 }
 
 .alpha-color-accent-5 {
-  color: rgba(255, 193, 7, 0.5) !important;
+  color: rgba(255, 160, 0, 0.5) !important;
 }
 
 .alpha-accent-5 {
-  background: rgba(255, 193, 7, 0.5) !important;
+  background: rgba(255, 160, 0, 0.5) !important;
 }
 
 .alpha-color-secondary-5 {
@@ -1226,19 +1226,19 @@ h6 {
 }
 
 .alpha-color-primary-6 {
-  color: rgba(233, 30, 99, 0.4) !important;
+  color: rgba(198, 40, 40, 0.4) !important;
 }
 
 .alpha-primary-6 {
-  background: rgba(233, 30, 99, 0.4) !important;
+  background: rgba(198, 40, 40, 0.4) !important;
 }
 
 .alpha-color-accent-6 {
-  color: rgba(255, 193, 7, 0.4) !important;
+  color: rgba(255, 160, 0, 0.4) !important;
 }
 
 .alpha-accent-6 {
-  background: rgba(255, 193, 7, 0.4) !important;
+  background: rgba(255, 160, 0, 0.4) !important;
 }
 
 .alpha-color-secondary-6 {
@@ -1266,19 +1266,19 @@ h6 {
 }
 
 .alpha-color-primary-7 {
-  color: rgba(233, 30, 99, 0.3) !important;
+  color: rgba(198, 40, 40, 0.3) !important;
 }
 
 .alpha-primary-7 {
-  background: rgba(233, 30, 99, 0.3) !important;
+  background: rgba(198, 40, 40, 0.3) !important;
 }
 
 .alpha-color-accent-7 {
-  color: rgba(255, 193, 7, 0.3) !important;
+  color: rgba(255, 160, 0, 0.3) !important;
 }
 
 .alpha-accent-7 {
-  background: rgba(255, 193, 7, 0.3) !important;
+  background: rgba(255, 160, 0, 0.3) !important;
 }
 
 .alpha-color-secondary-7 {
@@ -1306,19 +1306,19 @@ h6 {
 }
 
 .alpha-color-primary-8 {
-  color: rgba(233, 30, 99, 0.2) !important;
+  color: rgba(198, 40, 40, 0.2) !important;
 }
 
 .alpha-primary-8 {
-  background: rgba(233, 30, 99, 0.2) !important;
+  background: rgba(198, 40, 40, 0.2) !important;
 }
 
 .alpha-color-accent-8 {
-  color: rgba(255, 193, 7, 0.2) !important;
+  color: rgba(255, 160, 0, 0.2) !important;
 }
 
 .alpha-accent-8 {
-  background: rgba(255, 193, 7, 0.2) !important;
+  background: rgba(255, 160, 0, 0.2) !important;
 }
 
 .alpha-color-secondary-8 {
@@ -1346,19 +1346,19 @@ h6 {
 }
 
 .alpha-color-primary-9 {
-  color: rgba(233, 30, 99, 0.1) !important;
+  color: rgba(198, 40, 40, 0.1) !important;
 }
 
 .alpha-primary-9 {
-  background: rgba(233, 30, 99, 0.1) !important;
+  background: rgba(198, 40, 40, 0.1) !important;
 }
 
 .alpha-color-accent-9 {
-  color: rgba(255, 193, 7, 0.1) !important;
+  color: rgba(255, 160, 0, 0.1) !important;
 }
 
 .alpha-accent-9 {
-  background: rgba(255, 193, 7, 0.1) !important;
+  background: rgba(255, 160, 0, 0.1) !important;
 }
 
 .alpha-color-secondary-9 {
@@ -3566,6 +3566,13 @@ section[id^=main-] * {
   outline: none;
 }
 
+@media (max-width: 960px) {
+  .box {
+    margin-left: 1em !important;
+    margin-right: 1em !important;
+  }
+}
+
 #header {
   position: relative;
   height: 4em;
@@ -3659,8 +3666,6 @@ section[id^=main-] * {
       -ms-flex-pack: center;
           justify-content: center;
   min-height: 100vh;
-  background: -webkit-gradient(linear, left top, right top, from(#200122), to(#6f0000));
-  background: linear-gradient(to right, #200122, #6f0000);
 }
 
 #title-img-container,
@@ -3802,7 +3807,10 @@ section[id^=main-] * {
 }
 
 #main-welcome {
-  background-image: url("../../img/rosa (1).jpg");
+  background-image: url("../../img/rosalia.jpg");
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: top;
   overflow: hidden;
   width: 100%;
   position: relative;
@@ -3920,7 +3928,7 @@ video {
       grid-template-columns: 100%;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  grid-column-gap: 1em;
+  grid-column-gap: 0;
   grid-row-gap: 2em;
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -4131,7 +4139,7 @@ video {
 }
 
 .input-button {
-  width: 100px;
+  width: auto;
   height: auto;
   position: relative;
   overflow: hidden;
