--- a/productLandingPage/styles/challenge/_contact.sass
+++ b/productLandingPage/styles/challenge/_contact.sass
@@ -49,7 +49,7 @@
             margin-bottom: inherit
 
 .input-button
-    width: 100px
+    width: auto
     height: auto
     position: relative
     // padding: 0.5em
