--- a/productLandingPage/styles/classes/_theme.sass
+++ b/productLandingPage/styles/classes/_theme.sass
@@ -1,7 +1,7 @@
 /* Color Theme Swatches in Hex */
 $accent: #FFA000
-$primary: #C62828
-$secondary: #009688
+$primary: #F03418
+$secondary: #8FAAC8
 
 /* Color Theme Swatches in RGBA */
 // $accent: rgba(77,54,40, 1)
