--- a/productLandingPage/styles/challenge/_header.sass
+++ b/productLandingPage/styles/challenge/_header.sass
@@ -1,7 +1,10 @@
 $header-height: 4em
 
 #header
-    position: relative
+    position: fixed
+    z-index: 10
+    top: 0
+    left: 0
     height: $header-height
     width: 100%
     display: flex
@@ -9,11 +12,22 @@ $header-height: 4em
     justify-content: space-between
     align-items: center
     padding: 0 1em
+    background: transparent
     & > *
         position: relative
         z-index: 11
     *
         outline: none
+
+#logo
+    display: none
+    filter: brightness(2)
+
+#header.scroll-activated
+    background: $primary
+    #logo
+        display: block
+        max-width: $header-height
 
 #nav-bar, #options
     &.activated
@@ -22,10 +36,6 @@ $header-height: 4em
 #options
     &.activated
         transform: translateX(100%)
-
-#logo
-    max-width: $header-height
-
 #nav-bar
     transform: translateX(-100%)
 #options
