--- a/productLandingPage/styles/challenge/_welcome.sass
+++ b/productLandingPage/styles/challenge/_welcome.sass
@@ -1,10 +1,11 @@
 @import 'welcome_menu'
 
 #main-welcome
-    background-image: url('../../img/rosalia.jpg')
+    background-image: url('../../img/Billie-Eilish.jpg')
     background-size: cover
     background-position-x: center
     background-position-y: top
+    background-attachment: fixed
     overflow: hidden
     width: 100%
     position: relative
