--- a/productLandingPage/styles/classes/_theme.sass
+++ b/productLandingPage/styles/classes/_theme.sass
@@ -1,7 +1,7 @@
 /* Color Theme Swatches in Hex */
-$accent: #FFA000
-$primary: #F03418
-$secondary: #8FAAC8
+$accent: #F7CE03
+$primary: #ABD4D2
+$secondary: #9885ED
 
 /* Color Theme Swatches in RGBA */
 // $accent: rgba(77,54,40, 1)
