--- a/productLandingPage/styles/challenge/_welcome_menu.sass
+++ b/productLandingPage/styles/challenge/_welcome_menu.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Megrim&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Ceviche+One&display=swap')
 
 #circles-container
     width: 100%
@@ -6,71 +6,58 @@
     align-items: center
     justify-content: center
     min-height: 100vh
-    // background: linear-gradient(to right, #200122, #6f0000)
 
 #title-img-container,
 #links-container
-    font-family: 'Megrim', cursive
+    font-family: 'Ceviche One', cursive
     background: transparent
     position: absolute
     font-size: 40vmin
-    color: #FFA000
-    text-shadow: 1rem 1rem #F03418
+    color: map-get($light, main)
+    text-align: center
+    // text-shadow: 0.1em 0.1em #BD251D
+
+
+#title-img-container,
+#links-container
+    animation-name: opacity
+    animation-duration: 10s
+    animation-delay: 0
+    animation-iteration-count: infinite
+    animation-timing-function: ease
+    animation-direction: normal
+    animation-fill-mode: backwards
 
 #title-img-container
     z-index: 1
+    animation-direction: reverse
 #links-container
     z-index: 0
-    opacity: 0
+    font-size: 20vmin!important
 
-#circles-container.activated
-    #title-img-container
-        opacity: 0
-    #links-container
-        opacity: 1
-    .images-container,
-    .img-container
-        animation-play-state: paused
+// #main-welcome
+//     animation-name: invert
+//     animation-duration: 10s
+//     animation-delay: 0
+//     animation-iteration-count: infinite
+//     animation-timing-function: ease
+//     animation-direction: normal
+//     animation-fill-mode: backwards
 
-.images-container
-    z-index: 2
-    animation: enter 2s 1 normal linear forwards, rotate 360s infinite linear 2s
-    position: absolute
-    height: 8em
-    width: 8em
-    // background: red
-    padding: 0
-    margin: 0
+// @keyframes invert
+//     0%
+//         filter: hue-rotate(0deg)
+//     100%
+//         filter: hue-rotate(180deg)
 
-.img-container
-    width: 8em
-    height: 8em
-    border-radius: 50%
-    overflow: hidden
-    position: relative
-    animation: enter 2s 1 normal linear forwards, rotate 360s infinite reverse linear  2s
-    a
-        position: absolute
-        z-index: 1000
-    img
-        width: 100%
-        height: 100%
-        object-fit: cover
-
-@keyframes rotate
+@keyframes opacity
     0%
-        transform: rotate(0)
+        opacity: 0
+    49.99999%
+        opacity: 0
     50%
-        transform: rotate(180deg)
+        opacity: 1
     100%
-        transform: rotate(360deg)
-
-@keyframes enter
-    0%
-        transform: scale(0)
-        opacity: 0
-    100%
-        transform: scale(1)
         opacity: 1
 
 @media (max-width: map-get($breakpoints-sizes, md))
