--- a/surveyForm/styles/index/index.css
+++ b/surveyForm/styles/index/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,700");
-@import url("https://fonts.googleapis.com/css?family=Ceviche+One&display=swap");
 .sr-only {
   position: absolute;
   left: -10000px;
@@ -1432,7 +1431,7 @@ hr {
   border-style: solid;
 }
 
-.icon, #nav-bar, #options, .custom-menu-button, .custom-menu-button button, .custom-menu-button a, .box .x-actions, .little-box, #form fieldset {
+.icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1441,7 +1440,7 @@ hr {
           align-items: center;
 }
 
-.icon, #nav-bar, #options, .custom-menu-button, .custom-menu-button button, .custom-menu-button a, .input {
+.icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1456,39 +1455,12 @@ hr {
   transition: all .1s ease;
 }
 
-button, .custom-menu-button * {
+button {
   cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-}
-
-.button:before, .input-button:before {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-}
-
-.little-box .little-box-image img, .box.icon-box figure img, .custom-menu-button button, .custom-menu-button a, .custom-menu-button .background {
-  width: 100%;
-  height: 100%;
-}
-
-.custom-menu-button .background {
-  top: 0;
-  left: 0;
-}
-
-.custom-menu-button .background {
-  position: absolute;
-}
-
-.little-box .little-box-image {
-  border-radius: 100%;
-  overflow: hidden;
 }
 
 @media screen and (min-width: 0px) {
@@ -3468,721 +3440,6 @@ pre {
   line-height: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  background-color: lightblue;
-}
-
-#header, #main, #footer {
-  width: 100%;
-  height: auto;
-}
-
-section[id^=main-] {
-  min-height: 100vh;
-  overflow: hidden;
-}
-
-section[id^=main-] h2 {
-  text-transform: uppercase;
-}
-
-section[id^=main-] * {
-  -webkit-transition: -webkit-transform 2s ease !important;
-  transition: -webkit-transform 2s ease !important;
-  transition: transform 2s ease !important;
-  transition: transform 2s ease, -webkit-transform 2s ease !important;
-}
-
-.box *, .register * {
-  border: none;
-}
-
-.button {
-  font-weight: bolder;
-  height: auto;
-  border-radius: 1em;
-  padding: 1em 3em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border: 0.125em solid currentColor;
-  background: inherit;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.button:before {
-  -webkit-transition: all .3s ease-in;
-  transition: all .3s ease-in;
-  background: #F2F2F2 !important;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  z-index: -1;
-}
-
-.button:hover:before, .button:focus:before {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-.button:active:before, .button:focus-within:before {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-  background: #0D090A !important;
-}
-
-.button:active, .button:focus-within {
-  color: #F2F2F2 !important;
-  border-color: #0D090A !important;
-}
-
-.animation-activated {
-  -webkit-transition: all 1s linear !important;
-  transition: all 1s linear !important;
-}
-
-#main-how-it-works.animation-activated,
-#main-pricing.animation-activated,
-#main-contact.animation-activated {
-  opacity: 1;
-}
-
-*[class*=box]:focus,
-*[class*=box]:focus-within {
-  background: #F2F2F2 !important;
-  outline: none;
-}
-
-@media (max-width: 960px) {
-  .box {
-    margin-left: 1em !important;
-    margin-right: 1em !important;
-  }
-}
-
-#header {
-  position: fixed;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  height: 4em;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0 1em;
-  background: transparent;
-}
-
-#header > * {
-  position: relative;
-  z-index: 11;
-}
-
-#header * {
-  outline: none;
-}
-
-#logo {
-  display: none;
-}
-
-#header.scroll-activated {
-  background: #ABD4D2;
-}
-
-#header.scroll-activated #logo {
-  display: block;
-  max-width: 4em;
-}
-
-#nav-bar.activated, #options.activated {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-#options.activated {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-#nav-bar {
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-}
-
-#options {
-  -webkit-transform: translateX(200%);
-          transform: translateX(200%);
-}
-
-#nav-bar, #options {
-  min-height: 100vh;
-  width: 50%;
-  z-index: 10;
-  background: inherit;
-  top: 0;
-  left: 0;
-  position: fixed;
-}
-
-#nav-bar *, #options * {
-  color: currentColor;
-}
-
-#nav-bar li, #options li {
-  margin-top: 2em;
-  font-size: 2em;
-}
-
-#nav-bar li a, #options li a {
-  opacity: 0.5;
-}
-
-#nav-bar li a:hover, #nav-bar li a:focus, #options li a:hover, #options li a:focus {
-  opacity: 1;
-  padding-left: 1em;
-}
-
-#circles-container {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  min-height: 100vh;
-}
-
-#title-img-container,
-#links-container {
-  font-family: 'Ceviche One', cursive;
-  background: transparent;
-  position: absolute;
-  font-size: 40vmin;
-  color: #F2F2F2;
-  text-align: center;
-}
-
-#title-img-container,
-#links-container {
-  -webkit-animation-name: opacity;
-          animation-name: opacity;
-  -webkit-animation-duration: 10s;
-          animation-duration: 10s;
-  -webkit-animation-delay: 0;
-          animation-delay: 0;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease;
-          animation-timing-function: ease;
-  -webkit-animation-direction: normal;
-          animation-direction: normal;
-  -webkit-animation-fill-mode: backwards;
-          animation-fill-mode: backwards;
-}
-
-#title-img-container {
-  z-index: 1;
-  animation-direction: reverse;
-}
-
-#links-container {
-  z-index: 0;
-  font-size: 20vmin !important;
-}
-
-@-webkit-keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  49.99999% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  49.99999% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@media (max-width: 960px) {
-  #title-img-container,
-  #links-container {
-    font-size: 20vmin;
-    word-break: break-all;
-  }
-}
-
-#main-welcome {
-  background-image: url("../../img/Billie-Eilish.jpg");
-  background-size: cover;
-  background-position-x: center;
-  background-position-y: top;
-  background-attachment: fixed;
-  overflow: hidden;
-  width: 100%;
-  position: relative;
-}
-
-#main-welcome #circles-container {
-  position: relative;
-  overflow: hidden;
-  min-height: 100vh;
-  width: 100%;
-}
-
-.box {
-  -webkit-box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.4);
-  position: relative;
-}
-
-.box > * {
-  width: 100%;
-}
-
-.box, .box figure {
-  border-radius: 1em;
-}
-
-.box figure {
-  margin-top: -2em;
-  overflow: hidden;
-  -webkit-box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.4);
-}
-
-.box p {
-  font-size: 2em;
-}
-
-.register input:not(.button) {
-  width: 100%;
-  margin-top: 2em;
-  padding: 1em 3em;
-  border-radius: 1em;
-  border: 0.125em solid currentColor;
-}
-
-.little-box {
-  position: relative;
-  margin-right: 5em !important;
-  min-height: 10em;
-}
-
-.little-box h3 {
-  font-size: 2em;
-}
-
-.little-box p {
-  font-size: 1em;
-}
-
-.little-box .little-x-content {
-  margin-right: 4em;
-}
-
-.little-box .little-box-image {
-  -webkit-box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.4);
-  height: 8em;
-  width: 8em;
-  position: absolute;
-  right: 0;
-  margin-right: -4em;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-}
-
-.little-box .little-box-image img {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-#main-features.animation-activated .little-box {
-  -webkit-transform: translateX(0) !important;
-          transform: translateX(0) !important;
-}
-
-#main-features .little-box:nth-of-type(4) {
-  -webkit-transform: translateX(-520%);
-          transform: translateX(-520%);
-}
-
-#main-features .little-box:nth-of-type(3) {
-  -webkit-transform: translateX(-390%);
-          transform: translateX(-390%);
-}
-
-#main-features .little-box:nth-of-type(2) {
-  -webkit-transform: translateX(-260%);
-          transform: translateX(-260%);
-}
-
-#main-features .little-box:nth-of-type(1) {
-  -webkit-transform: translateX(-130%);
-          transform: translateX(-130%);
-}
-
-video {
-  width: 100%;
-}
-
-#main-pricing > section {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 100%;
-      grid-template-columns: 100%;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
-  grid-column-gap: 0;
-  grid-row-gap: 2em;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.box.icon-box {
-  max-width: 100%;
-}
-
-.box.icon-box figure {
-  height: 8em;
-  min-width: 8em !important;
-  max-width: 8em !important;
-  margin: -5em auto 0;
-}
-
-.box.icon-box figure img {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-@media (min-width: 600px) {
-  .box.icon-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-  }
-  .box.icon-box header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .box.icon-box header figure {
-    margin: -2em 1em 0 0;
-  }
-  .box.icon-box .x-content {
-    margin: 0 9em;
-    padding-right: 9em;
-  }
-}
-
-@media (max-width: 600px) {
-  #main-pricing > section {
-    grid-row-gap: 5em;
-    margin-top: 2em;
-  }
-  .box.icon-box header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
-@media (min-width: 960px) {
-  #main-pricing > section {
-    -ms-grid-columns: 50%;
-        grid-template-columns: 50%;
-  }
-}
-
-@media (min-width: 1280px) {
-  #main-pricing > section {
-    -ms-grid-columns: 50%;
-        grid-template-columns: 50%;
-  }
-}
-
-@media (min-width: 1920px) {
-  #main-pricing > section {
-    -ms-grid-columns: 50%;
-        grid-template-columns: 50%;
-  }
-}
-
-.x-content {
-  font-weight: bold;
-}
-
-.x-content .mdi {
-  margin-right: 1em !important;
-}
-
-#main-pricing.animation-activated .icon-box {
-  -webkit-transform: translateX(0) !important;
-          transform: translateX(0) !important;
-}
-
-#main-pricing .icon-box:nth-child(2n) {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-#main-pricing .icon-box:nth-child(2n+1) {
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-}
-
-#form,
-#form fieldset {
-  position: relative;
-}
-
-#form fieldset {
-  width: 100%;
-  height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#form * {
-  font-size: 1.1em;
-  font-weight: bolder;
-  font-family: monospace;
-  outline: none;
-}
-
-#form legend {
-  font-size: 2em;
-}
-
-#form input, #form textarea {
-  width: 100%;
-  background: transparent;
-}
-
-#form textarea {
-  min-height: 4em !important;
-  resize: vertical;
-}
-
-.input {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 100%;
-}
-
-.input label {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 30%;
-          flex: 1 0 30%;
-  text-align: left;
-}
-
-.input input, .input textarea {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 70%;
-          flex: 0 1 70%;
-  padding: 0.5em;
-  border: 0.125em solid currentColor;
-  border-radius: 1em;
-}
-
-.input input:hover, .input textarea:hover {
-  -webkit-box-shadow: 0.125em 0.125em 0 0 currentColor;
-          box-shadow: 0.125em 0.125em 0 0 currentColor;
-}
-
-.input input:focus, .input textarea:focus {
-  -webkit-box-shadow: 0.5em 0.5em 0 0 currentColor;
-          box-shadow: 0.5em 0.5em 0 0 currentColor;
-}
-
-@media (max-width: 600px) {
-  .input {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-  }
-  .input label {
-    margin-bottom: inherit;
-  }
-}
-
-.input-button {
-  width: auto;
-  height: auto;
-  position: relative;
-  overflow: hidden;
-  border-radius: 1em;
-  border: 0.125em solid currentColor;
-}
-
-.input-button .button {
-  border: none;
-  padding: 1em 3em;
-}
-
-.input-button:before {
-  -webkit-transition: all .3s ease-in;
-  transition: all .3s ease-in;
-  background: #F2F2F2 !important;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  z-index: 0;
-}
-
-.input-button:hover:before, .input-button:focus:before {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-.input-button:active:before, .input-button:focus-within:before {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-  background: #0D090A !important;
-}
-
-#nav-bar-controller ~ .background {
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-}
-
-#options-controller ~ .background {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-.custom-menu-button {
-  position: relative;
-  width: 3em;
-  height: 3em;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.custom-menu-button * {
-  -webkit-transition: all 0.5s ease !important;
-  transition: all 0.5s ease !important;
-}
-
-.custom-menu-button:hover .background, .custom-menu-button:focus .background {
-  -webkit-transform: translateX(0) !important;
-          transform: translateX(0) !important;
-  background: #F7CE03;
-}
-
-.custom-menu-button:active .background, .custom-menu-button:focus-within .background {
-  -webkit-transform: translateX(0) !important;
-          transform: translateX(0) !important;
-  background: #F7CE03;
-}
-
-.custom-menu-button button, .custom-menu-button a {
-  position: absolute;
-  z-index: 2;
-  font-size: 1.2em;
-  background: transparent;
-  border: none;
-  color: inherit;
-}
-
-.custom-menu-button .background {
-  z-index: 0;
-}
-
-#footer .logo {
-  max-width: 8em;
-}
-
-#footer {
-  font-size: 1.2em;
-}
-
-#footer h4 {
-  font-weight: bolder;
 }
 
 @media print {
