--- a/surveyForm/styles/index/index.css
+++ b/surveyForm/styles/index/index.css
@@ -3442,6 +3442,49 @@ pre {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.custom-form {
+  width: 100%;
+  height: 40em;
+  background: rebeccapurple;
+  position: relative;
+}
+
+.custom-form form, .custom-form .form-div, .custom-form .controls {
+  padding: 2em;
+  position: relative;
+  width: 100%;
+}
+
+.custom-form form {
+  background: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  height: 100%;
+}
+
+.custom-form .form-div {
+  position: absolute;
+  background: green;
+  border-radius: 1em;
+  width: calc(100% - 4em);
+  height: calc(100% - 4em - 1em);
+}
+
+.custom-form .controls {
+  background: orange;
+}
+
 @media print {
   * {
     background: transparent !important;
