--- a/surveyForm/styles/challenge/_survey_form.sass
+++ b/surveyForm/styles/challenge/_survey_form.sass
@@ -7,24 +7,38 @@ $half-padding: (2em / 2)
     height: 40em
     background: rebeccapurple
     position: relative
-    form, .form-div, .controls
-        padding: $padding
+    overflow: hidden
+    form,
+    form > fieldset,
+    .controls,
+    .form-div
         position: relative
         width: 100%
+        height: 100%
     form
         background: red
-        display: flex
-        flex-direction: row
-        align-items: stretch
-        justify-content: flex-start
-        height: 100%
-    .form-div
-        position: absolute
+        padding: 1em
+    .controls
+        height: auto
+        background: orange
+        padding: $padding
+
+.form-div
+    background: yellow
+    position: absolute!important
+    top: 0
+    left: 0
+    @extend %centralize-all
+    transform: translateX(100%)
+    .content
+        position: relative
         background: green
         border-radius: $half-padding
-        width: calc(100% - #{$double-padding})
-        height: calc(100% - #{$double-padding} - 1em)
-    .controls
-        background: orange
 
+// $num-form-divs-min: 1
+// $num-form-divs-max: 5
+// @for $i from $num-form-divs-min through $num-form-divs-max
+//     $percent: 100% * ($i - 1)
+//     #form-div-#{$i}
+//         transform: translateY($percent)
 
