--- a/surveyForm/styles/challenge/_survey_form.sass
+++ b/surveyForm/styles/challenge/_survey_form.sass
@@ -30,11 +30,11 @@ $half-padding: (2em / 2)
     top: 0
     left: 0
     @extend %centralize-all
-    transform: translateX(100%)
+    transform: translateY(-100%)
     opacity: 0
     transition: transform .3s linear, opacity .1s linear
     &.activated
-        transform: translateX(0)
+        transform: translateY(0)
         opacity: 1
     .content
         position: relative
