--- a/surveyForm/styles/challenge/_survey_form.sass
+++ b/surveyForm/styles/challenge/_survey_form.sass
@@ -1,11 +1,10 @@
-$padding: 2em
-$double-padding: (2em * 2)
-$half-padding: (2em / 2)
+$padding: 2rem
+$double-padding: (2rem * 2)
+$half-padding: (2rem / 2)
 
 .custom-form
     width: 100%
-    height: 40em
-    background: rebeccapurple
+    height: 40rem
     position: relative
     // overflow: hidden
     form,
@@ -16,35 +15,117 @@ $half-padding: (2em / 2)
         width: 100%
         height: 100%
     form
-        background: red
-        padding: 1em
+        padding: 1rem
         overflow: hidden
+        font-size: 1.2em
     .controls
         height: auto
-        background: orange
         padding: $padding
 
 .form-div
-    background: yellow
     position: absolute!important
     top: 0
     left: 0
-    @extend %centralize-all
-    transform: translateY(-100%)
+    // @extend %centralize-all
+    display: flex
+    flex-direction: column
+    align-items: stretch
+    justify-content: center
+    transform: translateX(-100%)
     opacity: 0
     transition: transform .3s linear, opacity .1s linear
     &.activated
-        transform: translateY(0)
+        transform: translateX(0)
         opacity: 1
     .content
         position: relative
-        background: green
-        border-radius: $half-padding
 
-// $num-form-divs-min: 1
-// $num-form-divs-max: 5
-// @for $i from $num-form-divs-min through $num-form-divs-max
-//     $percent: 100% * ($i - 1)
-//     #form-div-#{$i}
-//         transform: translateY($percent)
+textarea
+    resize: vertical
 
+select
+    appearance: none
+
+.input, .form-box
+    width: 100%
+    // background: red
+    background: transparent
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    align-items: center
+    justify-content: space-around
+    padding: $padding
+    label
+        flex: 1 0 30%
+    input:not([type=submit]), textarea
+        flex: 0 1 70%
+    input, textarea
+        padding: 1rem 2rem
+
+.controls
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: flex-start
+    fieldset
+        background: white
+        padding: 0.5em
+        border-radius: 999999px
+
+// input[type=radio]
+//     position: relative
+//     @extend %basic-before
+//     @extend %basic-after
+//     &:before
+//         background: green
+//         z-index: 1
+
+.radio-label
+    width: 2em
+    height: 2em
+    // padding-left: 2em
+    position: relative
+    display: inline-block
+    margin-right: 1em
+    cursor: pointer
+    user-select: none
+    &:last-of-type
+        margin-right: 0
+    input
+        position: absolute
+        opacity: 0
+        width: 0
+        height: 0
+        &:checked ~ .symbol
+            background: blue
+            border: 0.25em solid white
+
+.symbol
+    width: 100%
+    height: 100%
+    background: gray
+    position: absolute
+    top: 0
+    left: 0
+    border-radius: 50%
+
+.symbol.error
+    background: red!important
+
+
+@media (max-width: map-get($breakpoints-sizes, md))
+    .input, .form-box
+        flex-direction: column
+        align-items: stretch
+        label
+            flex-grow: 100% 
+        input, textarea
+            flex-grow: 100% 
+        
+        input[type=submit]
+            align-self: center
+
+    .input
+        label
+            margin-bottom: 1rem
