--- a/surveyForm/styles/challenge/_survey_form.sass
+++ b/surveyForm/styles/challenge/_survey_form.sass
@@ -118,6 +118,7 @@ select
     align-items: center
     justify-content: flex-start
     background: transparent
+    border-radius: 999999px
     margin-bottom: 1em
     position: relative
     cursor: pointer
@@ -134,6 +135,10 @@ select
 
     span
         order: 2
+    input:hover,
+    input:focus
+        & ~ .checkmark:before
+            background: red
     input:checked ~ .checkmark:after
         opacity: 1
     .checkmark
@@ -147,11 +152,11 @@ select
         @extend %basic-before
         @extend %basic-after
         &:before
-            z-index: 1
+            z-index: -1
             border-radius: 999999px
             // border-radius: 50%
             // background: yellow
-            box-shadow: 0 0 0 0.25em black
+            // box-shadow: 0 0 0 0.25em black
 
         // &:after
         //     z-index: 1
