--- a/surveyForm/styles/index/index.css
+++ b/surveyForm/styles/index/index.css
@@ -1431,7 +1431,8 @@ hr {
   border-style: solid;
 }
 
-.icon {
+.icon, .input-container .row, .input-container .input-menu .button,
+.input-container .input-options .button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1440,7 +1441,8 @@ hr {
           align-items: center;
 }
 
-.icon {
+.icon, .input-container .row, .input-container .input-menu .button,
+.input-container .input-options .button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3522,7 +3524,7 @@ select {
           appearance: none;
 }
 
-.input, .form-box {
+.form-box {
   width: 100%;
   background: transparent;
   display: -webkit-box;
@@ -3537,24 +3539,23 @@ select {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   padding: 2rem;
 }
 
-.input label, .form-box label {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 30%;
-          flex: 1 0 30%;
+.form-box label {
+  margin-bottom: 1rem;
 }
 
-.input input:not([type=submit]), .input textarea, .form-box input:not([type=submit]), .form-box textarea {
+.form-box label, .form-box input:not([type=submit]), .form-box textarea {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 70%;
-          flex: 0 1 70%;
+      -ms-flex: 0 1 calc(100% - 2em);
+          flex: 0 1 calc(100% - 2em);
 }
 
-.input input, .input textarea, .form-box input, .form-box textarea {
+.form-box input, .form-box textarea {
   padding: 1rem 2rem;
 }
 
@@ -3728,34 +3729,106 @@ select {
       align-self: flex-start;
 }
 
-@media (max-width: 960px) {
-  .input, .form-box {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-  }
-  .input label, .form-box label {
-    -webkit-box-flex: 100%;
-        -ms-flex-positive: 100%;
-            flex-grow: 100%;
-  }
-  .input input, .input textarea, .form-box input, .form-box textarea {
-    -webkit-box-flex: 100%;
-        -ms-flex-positive: 100%;
-            flex-grow: 100%;
-  }
-  .input input[type=submit], .form-box input[type=submit] {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-  }
-  .input label {
-    margin-bottom: 1rem;
-  }
+.input-container {
+  background: yellow;
+  margin-bottom: 1rem;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+}
+
+.input-container .input-label,
+.input-container .input-message {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+  background: red;
+}
+
+.input-container .input-label,
+.input-container .input-message,
+.input-container .input-item,
+.input-container .input-options,
+.input-container .input-menu {
+  padding: 0.5em;
+}
+
+.input-container .row {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.input-container .input-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+.input-container .input-menu,
+.input-container .input-options {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  background: green;
+  border-radius: .75rem;
+}
+
+.input-container .input-menu .button,
+.input-container .input-options .button {
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border-radius: 100%;
+  padding: .75rem;
+  background: white;
+  margin-bottom: .75em;
+}
+
+.input-container .input-menu .button:last-of-type,
+.input-container .input-options .button:last-of-type {
+  margin-bottom: 0;
+}
+
+.input-container .input-options {
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-box-orient: horizontal !important;
+  -webkit-box-direction: normal !important;
+      -ms-flex-direction: row !important;
+          flex-direction: row !important;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  opacity: 0;
+  z-index: 10;
+  visibility: hidden;
+}
+
+.input-container .input-options.activated {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
 
 @media print {
